# slackdump

./: .cursorrules  README.md  build.py  chunking.ipynb  pyproject.toml  test.json
data/: C04HSTQAK0S.txt  last_chunk.txt  stakeholder_crm.json  stakeholder_crm_page_name_id_mapping.csv
src/: chunking.py  config.py  logging_config.py  main.py  md_dump.py  notion.py  notion_test.py  postprocess.py  prompts.yaml  schema.py  stakeholder_name_id.py  structured_extract.py
src/slack_archive/: __init__.py  chunking.py  config.py  logging_config.py  main.py  md_dump.py  postprocess.py  schema.py  slack_dump.py  structured_extract.py
src/slack_dump/: slack_dump.py
tests/: test_chunking.py
