[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-archive"
version = "0.1.0"
description = "Extract structured notes from Slack chat history using OpenAI and dump to markdown files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tiktoken",
    "ipykernel",
    "pydantic",
    "notion-client",
    "openai",
    "pyyaml",
    "backoff>=2.2.1",
    "rapidfuzz>=3.10.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "click>=8.1.7",
    "rich>=13.9.3",
    "pygithub>=2.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "tiktoken",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
slack-dump = "slack_dump.cli:main"
