[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-archive"
version = "0.1.0"
description = "Slack conversation dump and processing tool"
requires-python = ">=3.12"
dependencies = [
    "tiktoken",
    "ipykernel",
    "pydantic",
    "notion-client",
    "openai",
    "pyyaml",
    "backoff>=2.2.1",
    "rapidfuzz>=3.10.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "click>=8.1.7",
    "rich>=13.9.3",
    "pygithub>=2.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
]

[tool.ruff]
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # ruff-specific rules
    "TCH", # type-checking
]
preview = true  # Enable preview rules

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnknownMemberType = true

[project.scripts]
slack-archive = "slack_archive.cli.main:main"
